# regelrecht-mvp

./: .coderabbit.yaml  .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  CLAUDE.md  CONVERSION_REPORT.md  Cargo.toml  Code Review - Engine Consolidation.md  DEMO_PROMPT.md  DEMO_STATUS.md  Justfile  PROGRESS.md  README.md  REVIEW-ISSUES.md  REVIEW.md  add_machine_readable.py  behave.ini  corpus-registry.yaml  deny.toml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  regelrecht-implementation-plan.md  regelrecht-ux-demo.jsx  server.py  test_engine.py  virtual-leaping-peacock.md
.beads/: issues.jsonl
.claude/: settings.json
.claude/skills/: figma-to-html.md
.gemini/prompts/: gemini-review-correctness.toml  gemini-review-docs.toml  gemini-review-quality.toml  gemini-review-security.toml  gemini-review-tests.toml  gemini-review.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-dependabot.yml  claude.yml  deploy.yml  gemini-dispatch.yml  gemini-review.yml  mutation-testing.yml  release-engine.yml  rust.yml  scheduled-cleanup.yml
annotation/: __init__.py  matcher.py  selector.py
annotations/: kieswet.yaml  participatiewet.yaml  zorgverzekeringswet.yaml
backend/: main.py
backend/models/: law.py
backend/routers/: api.py
backend/services/: yaml_loader.py
corpus/context/: README.md
dev/: dev-down.mjs  dev.mjs
doc/: PLAN-machine-action-sheet.md  delegation-pattern.md  engine-consolidatie-plan.md  harvester-architecture.md  harvester-test.md  participatiewet-keten.md  regulation-conversion-status.md  todo-list.md  trace-comparison.md
doc/architecture/: system-overview.md
doc/experimenten/test5/: Cargo.toml  HighlightEditor01.md  run_server.sh
doc/experimenten/test5/src/: main.rs
doc/issues/: issue-article-id-collision.md  issue-phased-implementation.md
doc/migration/: MIGRATIE-EINDRAPPORT.md  algemene-kinderbijslagwet-migratie-notes.md  algemene-kinderbijslagwet-migratie-samenvatting.md  awb-migratie-analyse.md  migration-result.md  participatiewet-migratie-notes.md  penitentiaire-beginselenwet-migratie-status.md  poc-migratie-plan.md  wet-brp-migratie-analyse.md  wet-inkomstenbelasting-migratie-analyse.md  wet-kinderopvang-migratie-status.md  wet-wia-migratie-status.md  ziektewet-migratie-analyse.md
doc/poc-migration/: CONVERSION_REPORT.md  zorgtoeslag-corrections.md
doc/prompts/: law-conversion-guide.md
doc/rfcs/: RFC-TEMPLATE.md  (+14 more)
engine/: __init__.py  article_loader.py  context.py  data_sources.py  engine.py  logging_config.py  rule_resolver.py  service.py  uri_resolver.py  utils.py
features/: annotation.feature  bezwaartermijn.feature  bijstand.feature  environment.py  gewone_bijstand.feature  leerplichtwet.feature  negative_scenarios.feature  rijbewijs.feature  rotterdam_bijstand.feature  termijnen.feature  zorgtoeslag.feature
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dockerignore  MIGRATION-PROGRESS.md  README.md  dev.html  editor-example.html  editor.html  index.html  main.js  nginx.conf  package-lock.json  package.json  participatiewet.html  playwright.config.js  storybook-plan.md  tailwind.config.js  vite.config.js
frontend-lawmaking/: Dockerfile  index.html  main.js  package-lock.json  package.json  vite.config.js
harvester/: __main__.py  cli.py  config.py  models.py
regelrecht/: __init__.py  matcher.py  models.py  selectors.py
script/: annotation_converter.py  convert_cvdr.py  download_harvester_fixtures.py  download_law.py  fix_schema.py  fix_yaml_style.py  generate_golden_fixtures.py  golden_test_definitions.py  install-engine.sh  protect_schema.py  sync_annotations.py  update_harvester_fixtures.py  validate.py  validate.sh
tests/: conftest.py  test_engine.py  test_integration.py
(+524 files in other folders)
