[workspace]
resolver = "2"
members = [
    "packages/engine",
    "packages/harvester",
    "packages/pipeline",
]
exclude = [
    "packages/admin",
]

[workspace.package]
edition = "2021"
authors = ["MinBZK <noreply@minbzk.nl>"]
license = "MIT"
repository = "https://github.com/MinBZK/regelrecht-mvp"
homepage = "https://github.com/MinBZK/regelrecht-mvp"
