[project]
name = "regelrecht-mvp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.0"
dependencies = [
    "jsonschema>=4.25.1",
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pre-commit>=4.4.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=engine",
    "--cov-report=term-missing",
    "--cov-report=html",
]
pythonpath = ["."]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
]
