[project]
name = "regelrecht-mvp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.0"
dependencies = [
    "jsonschema>=4.25.1",
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "lxml-stubs>=0.5.1",
    "pre-commit>=4.4.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.1",
    "ruamel-yaml>=0.18.17",
    "ruff>=0.14.4",
    "ty>=0.0.1a7",
    "yamllint>=1.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=engine",
    "--cov=harvester",
    "--cov-report=term-missing",
    "--cov-report=html",
]
pythonpath = ["."]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
]

[tool.ty.environment]
python-version = "3.12"
root = [".", "features/steps"]

[tool.ty.src]
include = ["engine", "harvester", "script", "tests", "features", "main.py"]
# script/download_law.py is a symlink that appears as a text file on Windows
exclude = ["frontend", "script/download_law.py"]

[tool.ty.terminal]
error-on-warning = false
output-format = "full"

[tool.ruff]
exclude = ["frontend"]
